--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
+    android:padding="8dp"
     tools:context="com.example.android.gpsdatalogger.MainActivity">
 
     <LinearLayout
@@ -21,7 +22,7 @@
             android:id="@+id/tc_event_time"
             style="@style/textViewStyle"
             android:format24Hour="yyyyMMdd hh:mm:ss"
-            android:format12Hour="@null"/>
+            android:format12Hour="yyyyMMdd hh:mm:ss"/>
 
     </LinearLayout>
 
@@ -59,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+
         android:paddingTop="12dp">
         <TextView
             android:id="@+id/tv_log_display"
