--- a/app/src/main/res/layout/directory_list_item.xml
+++ b/app/src/main/res/layout/directory_list_item.xml
@@ -7,6 +7,6 @@
         android:id="@+id/tv_directory_list_item"
         style="@style/textViewStyle"
         android:layout_width="match_parent"
-        android:layout_height="40dp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
