--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="android:textColor">@android:color/holo_green_light</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">12dp</item>
         <item name="android:textSize">22sp</item>
     </style>
 
