--- a/app/src/main/res/layout/directory_list_item.xml
+++ b/app/src/main/res/layout/directory_list_item.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@+id/tv_directory_list_item"
-        style="@style/textViewStyle"
+        style="@style/listTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
