--- a/app/src/main/res/menu/directory_menu.xml
+++ b/app/src/main/res/menu/directory_menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.android.gpsdatalogger.FileManagerActivity">
     <item
         android:id="@+id/action_create_file"
         android:title="add new file"
