adjust note logging format to include time stamps

--- a/app/src/main/res/layout/activity_logging.xml
+++ b/app/src/main/res/layout/activity_logging.xml
@@ -21,8 +21,8 @@
         <TextClock
             android:id="@+id/tc_event_time"
             style="@style/textViewStyle"
-            android:format24Hour="yyyyMMdd hh:mm:ss"
-            android:format12Hour="yyyyMMdd hh:mm:ss"/>
+            android:format24Hour="yyyy.MM.dd hh:mm:ss"
+            android:format12Hour="@null"/>
 
     </LinearLayout>
 
