modify alertdialog for notes, adjust data to prep for WAM output

--- a/app/src/main/res/layout/activity_file_manager.xml
+++ b/app/src/main/res/layout/activity_file_manager.xml
@@ -9,8 +9,7 @@
 
     <TextView
         style="@style/textViewStyle"
-        android:text="@string/filesSavedTo"
-        android:visibility="invisible"/>
+        android:text="@string/filesSavedTo"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_file_directory"
