--- a/app/src/main/res/layout/alert_dialog_layout.xml
+++ b/app/src/main/res/layout/alert_dialog_layout.xml
@@ -2,11 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
+
+    <TextView
+        android:id="@+id/tv_time"
+        style="@style/textViewStyle" />
+
+    <TextView
+        android:id="@+id/tv_azimuth"
+        style="@style/textViewStyle" />
+
+    <TextView
+        android:id="@+id/tv_lat"
+        style="@style/textViewStyle" />
+
+    <TextView
+        android:id="@+id/tv_long"
+        style="@style/textViewStyle" />
 
     <EditText
         android:id="@+id/et_new_file"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        style="@style/textViewStyle" />
 
 </LinearLayout>
