add alert dialog confirmation to record event

--- a/app/src/main/res/layout/alert_dialog_layout.xml
+++ b/app/src/main/res/layout/alert_dialog_layout.xml
@@ -23,6 +23,7 @@
 
     <EditText
         android:id="@+id/et_new_file"
-        style="@style/textViewStyle" />
+        style="@style/textViewStyle"
+        android:layout_width="match_parent"/>
 
 </LinearLayout>
