create a seperate directory/file for storing data in WAM format

--- a/app/src/main/res/layout/activity_file_manager.xml
+++ b/app/src/main/res/layout/activity_file_manager.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.android.gpsdatalogger.FileManagerActivity">
 
     <TextView
-        style="@style/textViewStyle"
+        style="@style/listTextViewStyle"
         android:text="@string/filesSavedTo"/>
 
     <android.support.v7.widget.RecyclerView
