--- a/app/src/main/res/layout/activity_logging.xml
+++ b/app/src/main/res/layout/activity_logging.xml
@@ -21,8 +21,8 @@
         <TextClock
             android:id="@+id/tc_event_time"
             style="@style/textViewStyle"
-            android:format24Hour="yyyyMMdd HH:mm:ss"
-            android:format12Hour="yyyyMMdd HH:mm:ss"/>
+            android:format24Hour="yyyyMMdd HHmmss"
+            android:format12Hour="yyyyMMdd HHmmss"/>
 
     </LinearLayout>
 
