--- a/app/src/main/res/layout/activity_logging.xml
+++ b/app/src/main/res/layout/activity_logging.xml
@@ -54,10 +54,12 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/tv_lat_logact"
-            style="@style/textViewStyle"/>
+            style="@style/textViewStyle"
+            android:text="00:00.00000"/>
         <TextView
             android:id="@+id/tv_long_logact"
-            style="@style/textViewStyle"/>
+            style="@style/textViewStyle"
+            android:text="00:00.00000"/>
 
     </LinearLayout>
     </LinearLayout>
