fix alert on dismiss listener

--- a/app/src/main/res/layout/alert_dialog_layout.xml
+++ b/app/src/main/res/layout/alert_dialog_layout.xml
@@ -24,6 +24,7 @@
     <EditText
         android:id="@+id/et_new_file"
         style="@style/textViewStyle"
+        android:maxLength="255"
         android:layout_width="match_parent"/>
 
 </LinearLayout>
